<?xml version="1.0" encoding="utf-8"?>

<resources>
	<string name="app_name">Mahjongg Builder</string>
	<string name="app_description">\"Mahjongg Builder\" is a collection of 19 solitaire games where the player should remove all pieces from the game board.\nFind matching pairs of images from the both ends of lines of the game layout of pieces.\nThe editor of layout is built-in the program. Editor allow to create new game layout of pieces.</string>

	<string name="version_text">Version</string>
	<string name="license">License: GPL3\nhttp://www.gnu.org/licenses/gpl.html</string>
	<string name="copyright">Developers: Alexei Anoshenko, Roland Meier</string>
	<string name="home_page">Project Page:\nhttp://code.google.com/p/mahjonggbuilder/</string>

	<string name="nameless">[nameless]</string>

	<string name="undo">Undo</string>
	<string name="redo">Redo</string>
	<string name="trash">Trash</string>
	<string name="hint">Hint</string>
	<string name="game">Game</string>

	<string name="zoom_in">Zoom in</string>
	<string name="zoom_out">Zoom out</string>

	<string name="background_title">Background</string>

	<string name="yes">Yes</string>
	<string name="no">No</string>

	<string name="close_button">Close</string>
	<string name="cancel_button">Cancel</string>
	<string name="clear_button">Clear</string>
	<string name="exit_button">Exit</string>
	<string name="start_button">New game</string>
	<string name="prev_button">Previous</string>
	<string name="next_button">Next</string>

	<string name="action_button">Action</string>
	<string name="layer_button">Layer</string>
	<string name="scale_button">Scale</string>
	<string name="more_button">More</string>

	<string name="stop_button">Stop</string>
	<string name="slow_button">Slow</string>
	<string name="fast_button">Fast</string>

	<string name="play_item">Play</string>
	<string name="add_to_favorites_item">Add to Favorites</string>
	<string name="remove_favorite_item">Remove from Favorites</string>
	<string name="statistics_item">Statistics</string>
	<string name="start_item">Start new game</string>
	<string name="restart_item">Restart game</string>
	<string name="shuffle_item">Shuffle</string>
	<string name="bookmark_item">Set bookmark</string>
	<string name="back_bookmark_item">Back to bookmark</string>
	<string name="info_item">Author and comment</string>
	<string name="autoplay_item">Autoplay</string>

	<string name="about_item">About</string>
	<string name="settings_item">Settings</string>
	<string name="background_item">Background</string>
	<string name="builder_item">Create game</string>

	<string name="add_single_item">Add single piece</string>
	<string name="add_group_item">Add group of pieces</string>
	<string name="remove_item">Remove</string>
	<string name="move_last_item">Move last fragment</string>
	<string name="move_layer_item">Move layer</string>
	<string name="move_all_item">Move all</string>
	<string name="scroll_item">Scroll</string>

	<string name="edit_item">Edit</string>
	<string name="delete_item">Delete</string>
	<string name="publish_item">Publish</string>

	<string name="layer1_item">Layer 1</string>
	<string name="layer2_item">Layer 2</string>
	<string name="layer3_item">Layer 3</string>
	<string name="layer4_item">Layer 4</string>
	<string name="layer5_item">Layer 5</string>
	<string name="layer6_item">Layer 6</string>
	<string name="layer7_item">Layer 7</string>
	<string name="layer8_item">Layer 8</string>

	<string name="scale_1x_item">1x</string>
	<string name="scale_2x_item">2x</string>
	<string name="scale_3x_item">3x</string>

	<string name="warning">Warning</string>

	<string name="name_and_info_item">Name and description</string>
	<string name="save_item">Save</string>

	<string name="shuffle_question">Do you want to shuffle?</string>
	<string name="shuffle_question_no_moves">No moves left.\nDo you want to shuffle?</string>
	<string name="shuffle_maxtries">"No solvable deck found\nin %d tries. Go on trying?"</string>
	<string name="no_moves_start_question">No moves left. Sorry...\nDo you want to start new game?</string>
	<string name="start_question">Are you sure you want to start new game?</string>
	<string name="restart_question">Are you sure you want to restart current game?</string>
	<string name="no_bookmark_note">There are no bookmarks.</string>
	<string name="trash_is_empty">Trash is empty.</string>

	<string name="already_in_favorites">The game \"%s\" is already in Favorites.</string>
	<string name="added_to_favorites">The game \"%s\" was successfuly added to Favorites.</string>
	<string name="remove_from_favorites">Do You want to remove game \"%s\" from Favorites?</string>

	<string name="delete_game">Do You want to delete game \"%s\"?</string>

	<string name="win_message">Congratulations!!!\nYou have won!</string>
	<string name="statistics_title">Statistics</string>
	<string name="wins_text">Wins</string>
	<string name="losses_text">Losses</string>
	<string name="total_text">Total</string>
	<string name="best_time_text">Best time</string>
	<string name="current_time_text">Current time</string>
	<string name="highscore_best_time_text">New best time!</string>
	<string name="highscore_current_time_text">Prev. best time</string>
	<string name="statistics_average_text">Average</string>
	<string name="statistics_average_value_text">%1$d:%2$02d in %5$d games\n%3$.2fu %4$.2fs</string>

	<string name="left">Left:</string>
	<string name="layer">Layer:</string>

	<string name="game_name">Game name</string>
	<string name="author">Author</string>
	<string name="comment">Comment</string>

	<string name="disable_play">Not all pieces are placed.\nYou can\'t play this game.</string>

	<string name="editing_not_finished">Not all pieces are placed.\nYou are sure that want to leave the editor?</string>
	<string name="save_and_exit">Yes. To save game and exit.</string>
	<string name="exit_without_save">Yes. Exit without game saving.</string>
	<string name="continue_editing">No. To continue editing.</string>
	<string name="no_name">Game has no name.\nYou want to exit the editor?</string>
	<string name="set_name">Set name</string>

	<string name="game_options_group">Settings</string>

	<string name="pref_landscape_toolbar_key">LANDSCAPE_TOOLBAR</string>
	<string name="pref_landscape_toolbar_title">Landscape toolbar</string>
	<string name="pref_landscape_toolbar_summary">Location of toolbar in landscape orientation</string>

	<string name="pref_start_tab_key">START_TAB</string>
	<string name="pref_start_tab_title">Start page</string>

	<string name="pref_orientation_key">ORIENTATION</string>
	<string name="pref_orientation_title">Screen orientation</string>

	<string name="pref_zoom_key">ZOOM_RATIO</string>
	<string name="pref_zoom_title">Zoom ratio</string>

	<string name="pref_sound_key">SOUND</string>
	<string name="pref_sound_title">Enable sound</string>

	<string name="pref_shuffle_key">SHUFFLE</string>
	<string name="pref_shuffle_title">Shuffle</string>
	<string name="pref_shuffle_summary">Number of shuffles if no moves left.</string>

	<string name="pref_deal_key">DEAL</string>
	<string name="pref_deal_title">Deal</string>
	<string name="pref_deal_summary">Create easier decks.</string>

	<string name="first_color">First Color</string>
	<string name="second_color">Second Color</string>

	<string name="out_of_memory">Not enough memory. Sorry...</string>

</resources>
