<?xml version="1.0" encoding="utf-8"?>

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/game_name" />

		<EditText
			android:id="@+id/GameNameEdit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="text"/>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/author" />

		<EditText
			android:id="@+id/GameAuthorEdit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="text"/>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dip"
			android:text="@string/comment" />

		<EditText
			android:id="@+id/GameCommentEdit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="text"/>

	</LinearLayout>

</ScrollView>
