<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	>

	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>

		<ImageView
			android:id="@+id/AppIcon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/icon"
			android:layout_margin="4dip"
			/>

		<ImageView
			android:id="@+id/AppIcon2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/icon"
			android:layout_margin="4dip"
			android:layout_alignParentRight="true"
			/>

		<TextView
			android:id="@+id/AppName"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@id/AppIcon"
			android:layout_toLeftOf="@id/AppIcon2"
			android:gravity="center"
			android:textStyle="bold"
			android:textSize="24dip"
			android:textColor="#FFFFFFFF"
			android:paddingTop="8dip"
			android:paddingBottom="4dip"
			android:paddingLeft="16dip"
			android:paddingRight="16dip"
			android:text="@string/app_name"/>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/AppName"
			android:layout_toRightOf="@id/AppIcon"
			android:layout_toLeftOf="@id/AppIcon2"
			android:orientation="horizontal"
			android:gravity="center"
			>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:gravity="center">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textStyle="normal"
					android:textColor="#FFFFFFFF"
					android:text="@string/version_text"/>

				<TextView
					android:id="@+id/VersionNumber"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="8dip"
					android:textStyle="normal"
					android:textColor="#FFFFFFFF"
					android:text="1.x.x"/>

			</LinearLayout>

		</LinearLayout>

	</RelativeLayout>

	<TextView android:id="@+id/text"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="4dip"
		android:paddingLeft="8dip"
		android:paddingRight="8dip"
		android:gravity="center"
		android:textStyle="normal"
		android:autoLink="all"
		android:text="@string/license"/>

	<TextView android:id="@+id/text"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="4dip"
		android:paddingLeft="8dip"
		android:paddingRight="8dip"
		android:gravity="center"
		android:textStyle="normal"
		android:autoLink="all"
		android:text="@string/home_page"/>

	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:textStyle="bold"
		android:textColor="#FFFFFFFF"
		android:paddingTop="24dip"
		android:text="@string/copyright"/>

</LinearLayout>
